# wifi-data-acquisition-server

./: .gitignore  CMakeLists.txt  README.md  core_allocation_README.md  debugging_README.md  sdkconfig  sdkconfig.old  vcpkg_README.md
documentation/: .$ESP32 BLE and Wi-Fi Diagrams.drawio.bkp  ESP32 BLE and Wi-Fi Diagrams.drawio
main/: CMakeLists.txt  scan.c
main/ESP-IDF_Libraries/v5.1.2/esp-idf/components/driver/gpio/include/driver/: gpio.h
main/ble_setup/: ble_setup.c  ble_setup.h
main/constants/: constants.h
main/generic_funcs/: generic_funcs.c  generic_funcs.h
main/gps_library/: gps_library.c  gps_library.h
main/misc_funcs/: misc_funcs.c  misc_funcs.h
main/ping/: ping.c  ping.h
main/service_router/: service_router.c  service_router.h
main/utf8/: utf8.c  utf8.h
main/wifi_connect/: wifi_connect.c  wifi_connect.h
main/wifi_distance_calcs/: wifi_distance_calcs.c  wifi_distance_calcs.h
main/wifi_scan/: wifi_scan.c  wifi_scan.h
main/wifi_setup/: wifi_setup.c  wifi_setup.h
unused_components/: flatbuffers_README.md  protobuf_README.md  return-msgs.proto
vcpkg/scripts/azure-pipelines/: azure-pipelines.yml  generate-sas-tokens.ps1  patch-tuesday-checklist.md  roll-sas-tokens.ps1  test-modified-ports.ps1
vcpkg/scripts/azure-pipelines/linux/: managed-image.json
vcpkg/scripts/azure-pipelines/osx/: azure-pipelines.yml
vcpkg/scripts/azure-pipelines/windows-unstable/: job.yml
vcpkg/scripts/cmake/: vcpkg_configure_make.cmake
