
idf_component_register(SRCS 
                        "scan.c" 
                        "misc_funcs/misc_funcs.c"
                    INCLUDE_DIRS 
                        "C:/Users/marti/Documents/git_repos/ESP-IDF/v5.1.2"
                        "${CMAKE_CURRENT_SOURCE_DIR}/misc_funcs"
                    )
